--- a/land.html
+++ b/land.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="header">
-	    <h1>Hello World!</h1>
+	    <h1>Hello World! hell yeah usig GIT now!!!*</h1>
 	    <p>Whoa, we've just created a web page!</p>
     </div>
 </body>
