created web page htm/css

--- a/land.html
+++ b/land.html
@@ -1,15 +1,118 @@
 <html lang="en">
 <head>
-    <link href="style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Handlee&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Derek Fume</title>
 </head>
 <body>
-    <div id="header">
-	    <h1>Hello World! hell yeah usig GIT now!!!*</h1>
-	    <p>Whoa, we've just created a web page!</p>
-    </div>
+    <header>
+       <div class="container" id="firstDiv">
+           <div class="heading clearfix">
+                <img src="css/imgStyle/logo.png" alt="Aaagh >:(" class="logo">
+                <nav>
+                    <ul class="menu">
+                        <li>
+                            <a href="#" >Home</a>
+                        </li>
+                        <li>
+                            <a href="#" >Services</a>
+                        </li>
+                        <li>
+                            <a href="#" >Portfolio</a>
+                        </li>
+                        <li>
+                            <a href="#" >About</a>
+                        </li>
+                        <li>
+                            <a href="#" >Contact</a>
+                        </li>
+                    </ul>
+                </nav>
+           </div>
+           <div class="titles">
+               <div class="masterHead">
+                   Welcome <span class="stranger">stranger</span> 
+               </div>
+               <h1>
+                    Drem yol lok!
+               </h1>
+           </div>
+           <a href="#" class="button">
+                Read our story
+           </a>
+       </div>
+    </header>
+    <section id="services">
+        <div class="container">
+           <div class="titels">
+               <h2>
+                   Sample text
+               </h2>
+               <p id="paragraph_Description">
+                   Sample description
+               </p>
+           </div>
+           <div class="section_Menu clearfix">
+                <div class="services_Item">
+                    <img src="css/imgStyle/icon1.png" alt="=(">
+                    <h3>
+                        Subheading Text
+                    </h3>
+                    <p>
+                        Abrahkadabrah
+                    </p>
+                </div>
+                <div class="services_Item">
+                    <img src="css/imgStyle/icon1.png" alt="=(">
+                    <h3>
+                        Subheading Text
+                    </h3>
+                    <p>
+                        Abrahkadabrah
+                    </p>
+                </div>
+                <div class="services_Item">
+                    <img src="css/imgStyle/icon1.png" alt="=(">
+                    <h3>
+                        Subheading Text
+                    </h3>
+                    <p>
+                        Abrahkadabrah
+                    </p>
+                </div>
+           </div>
+       </div>
+    </section>
+    <section id="portfolio">
+        <div class="container">
+            <div class="titels">
+                <h2>
+                    Our Portfolio
+                </h2>
+                <p id="paragraph_Description">
+                    Sample description
+                </p>
+            </div>
+            <div class="works clearfix">
+                <img src="css/imgStyle/img1.jpg" alt="=)">
+                <img src="css/imgStyle/img2.jpg" alt="=)">
+                <img src="css/imgStyle/img3.jpg" alt="=)">
+            </div>
+         </div>
+    </section>
+    <section>
+        <div class="container">
+           101112
+        </div>
+    </section>
+    <footer>
+        <div class="container">
+            3333
+        </div>
+    </footer>
 </body>
 </html>
